--- a/portfolio.css
+++ b/portfolio.css
@@ -14,6 +14,7 @@ header nav{
     width: 100%;
     height: 100px;
     background-color: white;
+    box-shadow: inset -20px 0px 20px -10px rgb(170, 167, 167);
     
 }
 
@@ -43,7 +44,7 @@ a{
 main{
     background-color: white;
     width: 100%;
-    box-shadow: inset -10px 10px 30px -20px gray;
+    box-shadow: inset -20px 0px 40px -20px gray;
 }
 
 .section-one{
@@ -92,6 +93,82 @@ i{
     font-size: 100px;
 }
 
+.header-section{
+    text-align: center;
+}
+
+.header-section h2{
+    padding-top: 30px;
+    font-size: 45px;
+    font-weight: 900;
+}
+
+.header-section p{
+    margin: -10px 500px 30px 500px ;
+    font-weight:lighter;
+    word-spacing: 1px;
+    letter-spacing: 1px;
+    line-height: 20px;
+    font-size: 15px;
+
+}
+
+.section-conocimientos{
+    background-color: #f6f7fb;
+    padding: 100px 40px 130px;
+    box-shadow: inset -20px 0px 40px -20px gray;
+}
+
+.iconos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.icono{
+    width: 250px;
+    height: 250px;
+    border-radius: 5px;
+    border: 1px gainsboro solid;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.icono p{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.frase{
+    display: flex;
+    flex-direction: column;
+    background-color: #8338EC;
+    text-align: center;
+    padding: 100px;
+    color: white;
+}
+
+.frase p{
+    font-size: 20px;
+    margin: 16px 200px;
+}
+.frase i{
+    font-size: 100px;
+}
+cite{
+    font-size: 27px;
+    font-weight: 900;
+    font-style:normal ;
+}
+
 .section-proyect{
     display:flex;
     flex-direction: column;
@@ -103,14 +180,11 @@ i{
 
 .proyectos{
     display: flex;
-    align-content: center;
     flex-wrap: wrap;
     text-align: center;
     font-size: 20px;
-    margin: 0px;
-    
-  
-
+    width: 100%;
+    margin-left: 200px;
 }
 
 .proyectos img{
@@ -119,18 +193,14 @@ i{
 }
 
 .proyectos figure{
-    border: #EFEFEF solid 1px;
+    border: gainsboro solid 1px;
     border-radius: 5px;
+    width: 300px;
+    height: 300px;
+    margin: 12px;
     padding: 20px;
-    width: 350px;
-    height: 350px;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
-.proyectos #movie{
-    align-content: flex-start;
-}
 
 .redes-sociales{
     display:flex;
@@ -156,6 +226,7 @@ footer{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 40px 20px 60px;
 }
 
 footer i {
@@ -170,3 +241,11 @@ footer i {
     margin: -10px;
 }
 
+footer a{
+    color: white;
+    font-size: 15px;
+}
+
+footer p{
+    padding-right: 100px;
+}
