--- a/portfolio.css
+++ b/portfolio.css
@@ -43,7 +43,7 @@ header a {
 }
 
 #contact {
-  background-color: #833cea;
+  background-color: #6C63FF;
   color: white;
   border-radius: 50px;
   padding: 10px 30px;
@@ -60,6 +60,7 @@ main {
   justify-content: center;
   align-items: center;
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .section-one h2 {
@@ -72,7 +73,7 @@ main {
 .section-one h1 {
   margin-top: -10px;
   margin-bottom: 5px;
-  color: #8338ec;
+  color: #6C63FF;
   font-size: 60px;
   font-weight: 900;
 }
@@ -84,15 +85,15 @@ main {
 }
 
 .button {
-  background-color: #833cea;
+  background-color: #6C63FF;
   color: white;
   border-radius: 50px;
   padding: 15px 30px;
 }
 
 .section-one img {
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
 
 .header-section {
@@ -112,6 +113,7 @@ main {
   letter-spacing: 1px;
   line-height: 20px;
   font-size: 15px;
+  color: grey;
 }
 
 .section-knowledge {
@@ -151,7 +153,7 @@ main {
 .phrase {
   display: flex;
   flex-direction: column;
-  background-color: #8338ec;
+  background-color: #6C63FF;
   text-align: center;
   padding: 100px;
   color: white;
@@ -212,7 +214,7 @@ cite {
 
 .social-networks i {
   font-size: 20px;
-  color: #833cea;
+  color: #6C63FF;
 }
 
 .social-networks a {
@@ -223,7 +225,7 @@ cite {
 }
 
 footer {
-  background-color: #833cea;
+  background-color: #6C63FF;
   color: white;
   display: flex;
   justify-content: center;
@@ -242,7 +244,7 @@ footer li {
 }
 
 footer i {
-  color: #833cea;
+  color: #6C63FF;
   font-size: 20px;
   width: 20px;
   height: 20px;
